--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,8 @@ version: '3.7'
 
 services:
   pdm-analytics:
-    container_name: arima
+    container_name: analytics
     build: .
-    restart: always
     networks:
       - analyticsnet
 networks:
